Child bookmarks menus sometimes appeared to the left of their normal position when they had many bookmarks or folders
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox135 | --- | unaffected |
| firefox136 | --- | unaffected |
| firefox137 | --- | fixed |
People
(Reporter: matt.fagnani, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:137.0) Gecko/20100101 Firefox/137.0
Steps to reproduce:
I ran Firefox 137.0a1 20250204145611 to 20250205165659 on Wayland in Plasma 6.2.5 in a Fedora 41 KDE installation. I had previously enabled the menu bar. I clicked on the Bookmarks menu in the menu bar. I hovered over the bookmarks menu entries which have about 20 folders at the top level, and then varying numbers of folders and bookmarks in the child folders.
Actual results:
Child bookmarks menus sometimes appeared to the left of their normal position when they had many (about 20) bookmarks or folders by about the width of a menu. In other words, the child menus were shown on top of their parent menus at times, so that the parent menu couldn't be seen or used for the most part until hovering off the relevant menu. I first noticed the problem with 137.0a1 20250204145611, and it still happens with 137.0a1 20250205165659. I originally thought the problem was the same as one of the tab previews being incorrectly placed which I bisected to Bug 581863 which was fixed by the patch for Bug 1945834. However, the bookmarks child menu incorrect positioning still happened with 137.0a1 20250205165659. I bisected the bookmarks positioning problem to Bug 581863 also.
15:53.87 INFO: Narrowed integration regression window from [8b410273, 9efb94e5] (4 builds) to [ff5432cc, 9efb94e5] (2 builds) (~1 steps left)
15:53.87 INFO: No more integration revisions, bisection finished.
15:53.87 INFO: Last good revision: ff5432cc7e7c0d223330a7c8f09a89d797793f83
15:53.87 INFO: First bad revision: 9efb94e533503b0cd1309c16d01d488a69941059
15:53.87 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ff5432cc7e7c0d223330a7c8f09a89d797793f83&tochange=9efb94e533503b0cd1309c16d01d488a69941059
Expected results:
Child bookmarks menus should've been shown in their normal positions to the right of their parent menus every time.
| Reporter | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 1•1 year ago
•
|
||
I can reproduce the issue on Nightly ubuntu24.04 wayland, but not xwayland.
screen cast:
https://youtu.be/qnr2oIwf3bM
https://youtu.be/we_dLHfK8AQ?t=5
Comment 2•1 year ago
|
||
:emilio, since you are the author of the regressor, bug 581863, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 3•1 year ago
|
||
I think this is likely a pre-existing issue in practice...
| Assignee | ||
Comment 4•1 year ago
|
||
Just as we use the original anchor rect. Otherwise when
nsMenuPopupFrame::MoveTo changes mScreenRect and the anchor gravity, we
might end up with a same move-to-rect anchor, but different gravity.
Description
•