Bug 1946298 - Use the original anchor/popup alignment for move-to-rect. r=stransky

Just as we use the original anchor rect. Otherwise when
nsMenuPopupFrame::MoveTo changes mScreenRect and the anchor gravity, we
might end up with a same move-to-rect anchor, but different gravity.

Differential Revision: https://phabricator.services.mozilla.com/D237191